# 22203_nikulina

./: README.md  homework.cpp  notfirst.cpp
cpp/homework/shared_ptr/: CMakeLists.txt  shared_ptr.h
cpp/lab2/include/: interpretator.h
cpp/lab2/source/: IfBranch.cpp  del.cpp  drop.cpp  equal.cpp  less.cpp  mod.cpp  mul.cpp  over.cpp  plus.cpp  point.cpp  string.cpp  swap.cpp
cpp/lab3/socoban/: field.cpp  field.h  game.h  game_qt.h  level1.txt  level2.txt  level2_table.txt  level4_table.txt  level5_table.txt  main.cpp  player.cpp
homework/: homework.cpp
homework/shared_ptr/: main.cpp
jaba/lab1/: in.txt  log.0.0.txt  pom.xml
jaba/lab1/src/main/java/org/example/: Cr.java  Del.java  DevByZeroException.java  Drop.java  Dup.java  Emit.java  Equal.java  Factory.java  IfBranch.java  Interpretator.java  Less.java  LoopBranch.java  Main.java  Minus.java  Mod.java  More.java  Mul.java  Operations.java  Over.java  Plus.java  Point.java  Rot.java  Str.java  Swap.java
jaba/lab1/src/main/resources/: factory.properties  log.properties
jaba/lab1/src/test/java/org/example/: DelTest.java  DropTest.java  DupTest.java  EmitTest.java  IfBranchTest.java  LessTest.java  LoopBranchTest.java  MinusTest.java  ModTest.java  MulTest.java  PlusTest.java  StrTest.java
jaba/lab2/src/main/java/org/example/: Coin.java  Controller.java  Enemy.java  Field.java  Game.java  Game1.java  GameObject.java  Main.java  Painting.java  Player.java
jaba/lab2/src/main/resources/: coins.txt  coins2.txt  map.txt  map2.txt  newmap.txt
jaba/lab3/: pom.xml
jaba/lab3/src/main/java/org/example/: DownloadProgressTracker.java  Main.java  Message.java  Peer.java  ServerInfo.java  SocketHandler.java  TorrentClient.java  TorrentParser.java  TorrentServer.java
jaba/lab3/src/main/resources/: SMC-1.ftp.torrent  SMC-2.ftp.torrent  file1.mstr.torrent  peers.txt
lab1/: .gitignore  CMakeLists.txt  hash_table.cpp  hash_table.h  main.cpp  test.cpp
lab2/: .gitignore  CMakeLists.txt  main.cpp
lab2/include/: factory.h  interpretator.h  operations.h
lab2/source/: LoopBranch.cpp  cr.cpp  del.cpp  drop.cpp  dup.cpp  emit.cpp  equal.cpp  less.cpp  main.cpp  minus.cpp  mod.cpp  more.cpp  mul.cpp  operations.cpp  over.cpp  plus.cpp  point.cpp  rot.cpp  swap.cpp  test.cpp
lab3/build-socoban-windows-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
lab3/build-socoban-windows-Debug/socoban_autogen/: deps  mocs_compilation.cpp
lab3/build-socoban-windows-Debug/socoban_autogen/EWIEGA46WW/: moc_game_qt.cpp  moc_game_qt.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
lab3/socoban/: CMakeLists.txt  game.cpp  game_qt.cpp  level1_table.txt  level3.txt  level3_table.txt  level4.txt  level5.txt  mainwindow.cpp  mainwindow.h  player.h
starcraft/: battlecruiser.h  siegetank.h  unit.h  zergling.h
